--- a/dwm1001-prx/Cargo.toml
+++ b/dwm1001-prx/Cargo.toml
@@ -9,7 +9,7 @@ cortex-m = "0.6.2"
 cortex-m-rtfm = "0.5.1"
 cortex-m-rt = "0.6.12"
 bbqueue = "0.4.6"
-esb = {path = "../../esb"}
+esb = {path = "../../esb", features = ["fast-ru"] }
 asm-delay = "0.7.0"
 embedded-hal = "0.2.3"
 rtt-target = {version = "0.2.0", features = ["cortex-m"] }
@@ -18,6 +18,10 @@ nrf52810-hal = { version = "0.10", features = ["rt"], optional = true }
 nrf52832-hal = { version = "0.10", features = ["rt"], optional = true }
 nrf52840-hal = { version = "0.10", features = ["rt"], optional = true }
 nrf51-hal = {version = "0.10.0", features = ["rt"], optional = true}
+
+[dependencies.panic-persist]
+version = "0.2.1"
+default-features = false
 
 # Disable documentation to avoid spurious rustdoc warnings
 [[bin]]
