--- a/nrf5x-ptx/.cargo/config
+++ b/nrf5x-ptx/.cargo/config
@@ -3,7 +3,8 @@ target = 'thumbv7em-none-eabi' # nRF52
 # target = 'thumbv6m-none-eabi' # nRF51
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = 'gdb-multiarch -q -x openocd.gdb'
+runner = 'probe-rs run --chip nRF52840_xxAA --probe 1366:1015:000683672242'
+# runner = 'gdb-multiarch -q -x openocd.gdb'
 rustflags = [
   "-C", "link-arg=-Tlink.x",
 ]
