Basic embassy hello world

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
 [workspace]
+resolver = "2"
 members = [
+    "emb-ptx",
+]
+exclude = [
     "nrf5x-prx",
     "nrf5x-ptx",
 ]
@@ -14,6 +18,13 @@ lto = true
 codegen-units = 1
 debug-assertions = true
 
-[patch.crates-io.maitake-sync]
-git = "https://github.com/jamesmunns/mycelium/"
-rev = "3d70f02bcc0de0e0cc0602ddc2b4aee7a34c5201"
+[patch.crates-io]
+maitake-sync            = { git = "https://github.com/jamesmunns/mycelium/", rev = "3d70f02bcc0de0e0cc0602ddc2b4aee7a34c5201" }
+embassy-futures         = { git = "https://github.com/embassy-rs/embassy",   rev = "2c87b31395d0ea54ae6fffa47918392333578882" }
+embassy-sync            = { git = "https://github.com/embassy-rs/embassy",   rev = "2c87b31395d0ea54ae6fffa47918392333578882" }
+embassy-executor        = { git = "https://github.com/embassy-rs/embassy",   rev = "2c87b31395d0ea54ae6fffa47918392333578882" }
+embassy-time            = { git = "https://github.com/embassy-rs/embassy",   rev = "2c87b31395d0ea54ae6fffa47918392333578882" }
+embassy-nrf             = { git = "https://github.com/embassy-rs/embassy",   rev = "2c87b31395d0ea54ae6fffa47918392333578882" }
+embassy-usb             = { git = "https://github.com/embassy-rs/embassy",   rev = "2c87b31395d0ea54ae6fffa47918392333578882" }
+# embedded-io             = { git = "https://github.com/embassy-rs/embassy",   rev = "2c87b31395d0ea54ae6fffa47918392333578882" }
+# embedded-io-async       = { git = "https://github.com/embassy-rs/embassy",   rev = "2c87b31395d0ea54ae6fffa47918392333578882" }
