--- a/emb-ptx/Cargo.toml
+++ b/emb-ptx/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "embassy-nrf52840-examples"
+name = "embassy-esb-example"
 version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
@@ -15,7 +15,11 @@ embassy-nrf             = { version = "0.2.0", features = ["defmt", "nrf52840", 
 defmt = "0.3"
 defmt-rtt = "0.4"
 
-# static_cell = { version = "2" }
+static_cell = { version = "2" }
 cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
 cortex-m-rt = "0.7.0"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
+mutex = "0.1.0"
+
+[dependencies.esb]
+path = "../../esb"
